# Matrix

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.cpp  benchmark.hpp  main.cpp  matrix.cpp  matrix.hpp
header/: benchmark.hpp  matrix.hpp  matrix1.hpp  matrix3.hpp  matrix4.hpp  matrix_fixed.hpp  matrix_generic.hpp  vector.hpp
src/: benchmark.cpp  matrix.cpp  matrix1.cpp  matrix3.cpp  matrix4.cpp  matrix_generic.cpp  vector.cpp
tests/: fixed.cpp  time_measurement.cpp
unittest/: CMakeLists.txt  test_dot.cpp
